# Tetris_Game_Qt_Cplusplus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Tetris.bat  Tetris.sh
qml/: Arena.qml  CMakeLists.txt  GameArea.qml  GameInput.qml  GameParametersDialog.qml  Main.qml  Square.qml  UiScaler.qml
qml/overlays/: EndGameOverlay.qml  EscapeMenuOverlay.qml
src/: CMakeLists.txt  active_block_manager.cpp  active_block_manager.h  block.cpp  block.h  block_factory.h  block_movement_manager.cpp  block_movement_manager.h  common.h  controller.cpp  controller.h  coordinates.cpp  coordinates.h  direction.h  game.cpp  game.h  game_coordinator.cpp  game_coordinator.h  game_loop.cpp  game_loop.h  input_handler.cpp  input_handler.h  log_manager.cpp  log_manager.h  main.cpp  overlay_manager.cpp  overlay_manager.h  placed_squares.cpp  placed_squares.h  qml_helper.h  random_generator.h  rotation_coefficients.cpp  rotation_coefficients.h  rotation_coefficients_database.h  rotation_state.cpp  rotation_state.h  score_manager.cpp  score_manager.h  simulation_result.h  square.h  (+2 more)
src/backend/: CMakeLists.txt  active_block_manager.cpp  active_block_manager.h  block_factory.cpp  block_factory.h  block_movement_manager.cpp  block_movement_manager.h  common.h  config.h  coordinates.cpp  log_manager.h  random_generator.h  rotation_coefficients_database.h  rotation_state.cpp  rotation_state.h  simulation_result.cpp  simulation_result.h  speed_level.cpp  speed_level.h  square.cpp  square.h
src/backend/model/: block.cpp  block.h  game_speed_manager.cpp  game_speed_manager.h  game_state_manager.cpp  game_state_manager.h  model.cpp  model.h  placed_squares.cpp  placed_squares.h  score_manager.cpp  score_manager.h
src/config/: game_config.h
src/frontend/: CMakeLists.txt  game_arena.cpp  game_arena.h  gui_config.h  main_window.cpp  main_window.h
src/frontend/ui_forms/: main_window.ui
src/model/: active_block_model.cpp  active_block_model.h  model.cpp  model.h  placed_squares_model.cpp  placed_squares_model.h
src/speed_level/: speed_level.h  speed_level_data.cpp  speed_level_data.h  speed_level_utils.h
src/state_machine/: abstract_state.h  game_state_manager.h  game_state_type.h  i_state_actions.h
src/state_machine/states/: ended_state.h  escape_menu_state.h  initialization_state.h  ready_to_start_state.h  running_state.h
tests/: CMakeLists.txt
tests/googletest/: CMakeLists.txt
tests/googletest/googlemock/: CMakeLists.txt
tests/googletest/googlemock/include/gmock/: gmock-matchers.h
tests/googletest/googletest/: CMakeLists.txt
tests/googletest/googletest/cmake/: internal_utils.cmake
tests/src/: block_creation_test.cpp  block_drop_test.cpp  block_movement_test.cpp  block_rotation_test.cpp  common_test_fixture.h  placed_squares_test.cpp
